[tool.poetry]
name = "gpt-prompt-engineering"
version = "0.1.0"
description = ""
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpt_prompt_engineering"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
